# uvc-rs

./: README.md
.github/workflows/: android.yml
android-app/: .gitignore  CMakeLists.txt  build.gradle  settings.gradle
android-app/app/: build.gradle
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/cpp/: test_app.cpp
android-app/app/src/main/java/com/test/uvc/: MainActivity.kt
crates/uvc-core/src/: frame.rs
crates/uvc-driver/: Cargo.toml
crates/uvc-driver/examples/: fake-multi-camera-perf.rs
crates/uvc-driver/src/: backend.rs  decode.rs  descriptor.rs  device.rs  iso.rs  lib.rs  packet.rs  session.rs  transfer.rs
crates/uvc-jni/: Cargo.toml
crates/uvc-jni/kotlin/com/example/uvc/: NativeEngine.kt
crates/uvc-jni/src/: android.rs  bindings.rs  lib.rs
