[package]
name = "uvc-driver"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
rusb = ["dep:libc", "dep:libusb1-sys", "dep:rusb"]

[dependencies]
jpeg-decoder = "0.3"
tracing.workspace = true
uvc-core.workspace = true
libc = { version = "0.2", optional = true }
libusb1-sys = { version = "0.7", optional = true }
rusb = { version = "0.9", optional = true, features = ["vendored"] }
